<resources>
    <string name="app_name">Leuksna Moon Phases</string>

    <!-- Moon phases -->
    <string name="new_moon">New Moon</string>
    <string name="waxing_crescent">Waxing Crescent</string>
    <string name="first_quarter">First Quarter</string>
    <string name="waxing_gibbous">Waxing Gibbous</string>
    <string name="full_moon">Full Moon</string>
    <string name="waning_gibbous">Wanning Gibbous</string>
    <string name="last_quarter">Last Quarter</string>
    <string name="waning_crescent">Waning Crescent</string>
    
    <!-- Zodiac signs -->
    <string name="aries">Aries</string>
    <string name="taurus">Taurus</string>
    <string name="gemini">Gemini</string>
    <string name="cancer">Cancer</string>
    <string name="leo">Leo</string>
    <string name="virgo">Virgo</string>
    <string name="libra">Libra</string>
    <string name="scorpio">Scorpio</string>
    <string name="sagittarius">Sagittarius</string>
    <string name="capricorn">Capricorn</string>
    <string name="aquarius">Aquarius</string>
    <string name="pisces">Pisces</string>
    
    <!-- Main -->
    <string name="main_moonrise">Moonrise</string>
    <string name="main_moonset">Moonset</string>
    <string name="main_distance">Distance</string>
    <string name="main_altitude">Altitude</string>
    <string name="main_luminosity">Luminosity</string>
    <string name="main_zodiac">Zodiac</string>
    
    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="settings_general">General</string>
    <string name="settings_general_unit">Unit of measure</string>
    <string name="settings_general_unit_km">km</string>
    <string name="settings_general_unit_mi">mi</string>
    <string name="settings_general_show_stars_background">Show stars background</string>

    <string name="settings_location">Location</string>
    <string name="settings_no_location">No location</string>
    <string name="settings_location_set_location">Set location</string>
    <string name="settings_retrieve_location_failure_message">Oops! something went wrong getting your location. Please try again</string>
    
    <string name="settings_notifications">Notifications</string>
    <string name="settings_notifications_full_moon">Notify when full moon</string>
    <string name="settings_notifications_new_moon">Notify when new moon</string>


</resources>
