<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:popupTheme="@style/AppTheme.PopUpOverlay">

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/TextAppearance.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/settings" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <!--
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"> -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/settings_general"
            android:textAppearance="@style/TextAppearance.Subtitle2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/settings_general_unit"
            android:textAppearance="@style/TextAppearance.Body1"
            app:layout_constraintEnd_toStartOf="@+id/toggleUnit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textView2"
            app:singleSelection="true">

            <Button
                android:id="@+id/buttonKm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_general_unit_km"
                style="?attr/materialButtonOutlinedStyle"
                />
            <Button
                android:id="@+id/buttonMi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_general_unit_mi"
                style="?attr/materialButtonOutlinedStyle"
                />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/settings_general_show_stars_background"
            android:textAppearance="@style/TextAppearance.Body1"
            app:layout_constraintBottom_toBottomOf="@+id/switchShowStars"
            app:layout_constraintEnd_toStartOf="@+id/switchShowStars"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/switchShowStars" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchShowStars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:checked="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggleUnit" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/settings_location"
            android:textAppearance="@style/TextAppearance.Subtitle2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchShowStars" />

        <TextView
            android:id="@+id/textLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/settings_no_location"
            android:textAppearance="@style/TextAppearance.Body1"
            app:layout_constraintEnd_toStartOf="@+id/buttonSetLocation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSetLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/settings_location_set_location"
            app:layout_constraintBottom_toBottomOf="@+id/textLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textLocation"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:icon="@drawable/ic_set_location" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--
    </androidx.core.widget.NestedScrollView> -->

</androidx.coordinatorlayout.widget.CoordinatorLayout>